packages/babel-core/test/fixtures/errors/use-exclude/babel.config.js
module.exports = function myConfig(api) {
  api.cache.never();
  return { exclude: /node_modules/ }
};
